fix: Tweaks to type scale, misc cosmetic spacing

--- a/css/content.css
+++ b/css/content.css
@@ -22,13 +22,13 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0;
+  margin: 2em 0 1em;
   padding: 0;
   line-height: var(--line-height-s);
 }
 
 h1 {
-  font-size: var(--font-size-3);
+  font-size: var(--font-size-4);
 }
 
 h2 {
@@ -140,7 +140,8 @@ a {
   text-underline-offset: 0.15em;
 }
 
-a:hover {
+a:not(:disabled):hover,
+a:not([disabled]):hover {
   color: var(--color-text-link);
   text-decoration: none;
 }
@@ -152,7 +153,7 @@ a[target="_blank"]:after {
   font-weight: 500;
   content: "↗︎";
   text-decoration: none;
-  margin-left: 0.15em;
+  margin-left: 0.25em;
   vertical-align: text-top;
   color: var(--color-text-muted);
 }
